first obj in discussion in realatively good shape but needs refs

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -940,7 +940,7 @@ multiplot(gene_dendros(gene_data = gout$mat_d$Tajima.D[,-1:-3]) + ggtitle("Tajim
 
 There were `r length(unique(urate_goutGR$SYMBOL))` genes that had an association with urate or gout at a genome-wide significance level. This mapped to `r nrow(gout$mat_d$Tajima.D)` windows for each of the frequency based selection test statistics. \gls{ze} and \gls{fwh} clustered each super population into their own group and each cluster was exclusive to a super population. Both \gls{td} and \gls{flf} grouped most of the super populations correctly and nearly all clusters had good exclusivity for each single super population. \Gls{fld} clustered the individual populations into a few groups that resembled their super populations, however, other populations were scattered throughout. \gls{td}, \gls{fwh}, and \gls{ze} also had an Eastern/Western Polynesian population sub group within the Polynesian group (Figure \@ref(fig:goutdendros)). Unlike the F~ST~ clustering, the \gls{amr} populations were grouped together for \gls{td}, \gls{fwh}, and \gls{ze}. The \gls{eas} and \gls{pol} populations were closest for \gls{flf}, \gls{fwh}, and \gls{ze}, but not for \gls{td}, where the \gls{pol} populations were furthest from the other populations.
 
-There were 2 genes; _BCAS3_ and _RREB1_, that had at least one statistic in all of the Polynesian populations that met the threshold of significance in the lower tail. _BCAS3_ met the significance threshold for \gls{fwh} and \gls{flf} in all Polynesian populations, for \gls{fld} all Polynesian populations except \gls{sam}, and for \gls{td} all Polynesian populations except \gls{ton}. _INHBC_ and _ATXN2_ both had windows that met the lower tail significance threshold for \gls{ze} in all Polynesians populations, except \gls{sam} for _INHBC_. There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(urate_goutGR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the urate and gout associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the upper tail, _SLC2A9_ had windows with significant \gls{fld} in the \gls{cim}, \gls{nzm}, and  \gls{sam} populations. _VEGFA_ had windows of \gls{ze} values that met the upper tail significance threshold  for all Polynesians populations. _BAZ1B_ also met the threshold in the Eastern Polynesian populations. There were no loci that were significant in all Polynesian populations in the upper tail.
+There were 2 genes; _BCAS3_ and _RREB1_, that had at least one statistic in all of the Polynesian populations that met the threshold of significance in the lower tail. _BCAS3_ met the significance threshold for \gls{fwh} and \gls{flf} in all Polynesian populations; for \gls{fld}, all Polynesian populations except \gls{sam}, and for \gls{td} all Polynesian populations except \gls{ton}. _INHBC_ and _ATXN2_ both had windows that met the lower tail significance threshold for \gls{ze} in all Polynesians populations, except \gls{sam} for _INHBC_. There were `r lower_sig_stats %>% filter(SYMBOL %in% unique(urate_goutGR$SYMBOL)) %>% group_by(pop, statname, SYMBOL) %>%tally() %>% filter(pop %in% c('CIM','NZM','SAM','TON')) %>% ungroup()%>% select(SYMBOL) %>% distinct() %>% NROW()` of the urate and gout associated genes that had evidence from at least one selection statistic of possible selection in any of the Polynesian populations from the lower tail of the distributions. In the upper tail, _SLC2A9_ had windows with significant \gls{fld} in the \gls{cim}, \gls{nzm}, and  \gls{sam} populations. _VEGFA_ had windows of \gls{ze} values that met the upper tail significance threshold  for all Polynesians populations. _BAZ1B_ also met the threshold in the Eastern Polynesian populations. There were no loci that were significant in all Polynesian populations in the upper tail.
 
 ```{markdown, eval = FALSE}
 any stat with all populations
@@ -1446,7 +1446,7 @@ Compared to the clustering on the extreme tails, the random windows had poorer e
 ```{r randtabpander, results = 'asis'}
 rand_tab_pander <- rand_tab %>% mutate_at(., vars(-super, -total_complete, -prop50), funs(sprintf("%.3f", .))) %>% mutate(prop50 = sprintf('%.1f', prop50))
 #colnames(rand_tab_pander) <- c('Super Population', 'Min','Mean','Std. Dev','Max','Prop50 (%)', 'Total Complete')
-rand_tab_pander %>% kable(., caption = '(\\#tab:randtab) Proportion of individual populations assigned to their super population by hierarchical clustering across 10000 iterations of 2500 randomly drawn windows.', booktabs = TRUE, col.names =  c('Super Population', 'Min','Mean','Std. Dev','Max','Prop50 (%)', 'Total Complete (n)') ) %>% footnote(general = "Prop50 is the percentage of the iterations that had at least 50\\\\% of each super population assigned the same cluster. Total complete is the number of iterations all populations of a super population were assigned the same cluster", threeparttable = TRUE, general_title = "", escape = FALSE)
+rand_tab_pander %>% kable(., caption = '(\\#tab:randtab) Proportion of individual populations assigned to their super population by hierarchical clustering across 10000 iterations of 2500 randomly drawn windows.', booktabs = TRUE, col.names =  c('Super Population', 'Min','Mean','Std. Dev','Max','Prop50 (%)', 'Total Complete (n)'), align = "lrrrrrr" ) %>% footnote(general = "Prop50 is the percentage of the iterations that had at least 50\\\\% of each super population assigned the same cluster. Total complete is the number of iterations all populations of a super population were assigned the same cluster", threeparttable = TRUE, general_title = "", escape = FALSE)
 
 #pander::pandoc.table(rand_tab_pander, caption = '(\\#tab:randtab) *Summary of proportion of individual populations assigned to their super population cluster.* Min is the minimum proportion for the cluster from all iterations. Mean is the mean proportion of the maximum cluster proportions for all iterations. Max is the maximum proportion from all iterations. Prop50 is the number of times at least 50% of the super population was clustered together, expressed as a percentage. Total complete is the number of times the super population had all of its individual populations assigned the same cluster.', justify = c("left",rep("right", NCOL(rand_tab_pander)-1)), keep.line.breaks = TRUE)
 ```
@@ -1542,7 +1542,7 @@ perc_complete_no_amr <- bind_rows(
 <!-- need to get fld in the 100 -->
 ```{r}
 # add in fld 100 because it has no results, therefore wasn't in the original table
-poly_complete %>% full_join(., perc_complete %>% select(allcomplete = n, everything()), by = c('statname','gene_n')) %>% full_join(., perc_complete_no_amr %>% select(noAMR = n, everything()), by = c('statname','gene_n'))%>% mutate(allcomplete = ifelse(is.na(allcomplete),0,allcomplete), noAMR = ifelse(is.na(noAMR),0,noAMR)) %>% rbind(., c("Fu.Li.D",0,100,0,0,0)) %>% arrange(gene_n, statname)%>% select("Statistic" = statname, "Genes (n)" = gene_n, 'POL Complete (%)' = n, 'All Complete (%)' = allcomplete, 'All Complete excl. AMR (%)' = noAMR, everything()) %>% kable(., booktabs = TRUE, caption = '(\\#tab:randgenes) Percentage of draws from randomly selected genes for completely clustered super populations.')
+poly_complete %>% full_join(., perc_complete %>% select(allcomplete = n, everything()), by = c('statname','gene_n')) %>% full_join(., perc_complete_no_amr %>% select(noAMR = n, everything()), by = c('statname','gene_n'))%>% mutate(allcomplete = ifelse(is.na(allcomplete),0,allcomplete), noAMR = ifelse(is.na(noAMR),0,noAMR)) %>% rbind(., c("Fu.Li.D",0,100,0,0,0)) %>% arrange(gene_n, statname)%>% select("Statistic" = statname, "Genes (n)" = gene_n, 'POL Complete (%)' = n, 'All Complete (%)' = allcomplete, 'All Complete excl. AMR (%)' = noAMR, everything()) %>% kable(., booktabs = TRUE, caption = '(\\#tab:randgenes) Percentage of draws from randomly selected genes for completely clustered super populations.', align = "lrrrr")
 ```
 
 
@@ -1570,28 +1570,15 @@ Yes, the super populations can be grouped
 
 ### Objective 1: can the selection and neutrality statistics be used to group the 
 
-In Chapter 3 it was noticed that the populations had population specific distributions for the frequency spectrum based selection and neutrality statistics. The tails of the distributions are the most extreme and there most likely to be the loci that have undergone selection - specifically the negative tail is of interest for positive selection. It was thought that perhaps the tails could be used to group the individual populations using an unsupervised method - in this case, hierarchical clustering - and reassemble the super populations. The first attempts used the entire chromosome and created a summary statistic that was used to cluster. It was successful in reassmebling the super populations using F~ST~ which is a measure of population differentiation, and had previously been used with in the \gls{1kgp} dataset to establish how differentiated the \gls{1kgp} samples were from each other. The population grouping were also the same as in the \gls{pca}  that was used to select the individuals for the selection analysis (Figure \@ref(fig:allpopPCA)). Both the F~ST~ results and PCA (for the subject selection) confirmed the genetic relatedness and differentiation of the Polynesian populations in a global context, as being most closely related to the East Asian populations [\@ref]. It also confirmed that within Polynesia, the differntiation between Eastern and Western Polynesian, consistent with the out of Africa human migration and subsequent Polynesian expansion [\@refs]. 
+In Chapter 3 it was noticed that the populations had population specific distributions for the frequency spectrum based selection and neutrality statistics. The tails of the distributions are the most extreme and therefore most likely to be the loci that have undergone selection - specifically the negative tail is of interest for positive selection. It was thought that perhaps the tails could be used to group the individual populations using an unsupervised method - in this case, hierarchical clustering - and reassemble the super populations. The first test used the entire chromosome and created a summary statistic that was used to create clusters. It was successful in re-assembling the super populations using F~ST~ which is a measure of population differentiation, and had previously been used within the \gls{1kgp} dataset to establish how differentiated the \gls{1kgp} samples were from each other [@1KGP2015snp]. The population grouping were also the same as in the \gls{pca} that was used to select the individuals for the selection analysis (Figure \@ref(fig:allpopPCA)). Both the F~ST~ results and PCA (for the subject selection) confirmed the genetic relatedness and differentiation of the Polynesian populations in a global context, as being most closely related to the East Asian populations [\@ref]. It also confirmed that within Polynesia, the differentiation between Eastern and Western Polynesian, consistent with the out of Africa human migration and subsequent Polynesian expansion [\@refs]. 
 
-The whole chromosome summary using the intra-population frequency spectrum neutrality and selection statistics had varying levels of success in re-assembling the super populations. Some, such as \gls{fld} and \gls{flf} had mini-groups of 2-3 populations that were part of the same super population, but these mini-groups were not closely linked to the other populations of the same super population. These two statistics are based on singletons, and it is likely that these are not well represented in the markers of the CoreExome, or the quality control that the New Zealand samples underwent, leading to an under-representation of the singletons that actually might be present in the populations. Overall, it was found that the clustering of selection and neutrality test statistics for entire chromosomes did not resemble the grouping that clustering on F~ST~ produced. 
+The whole chromosome summary using the intra-population frequency spectrum neutrality and selection statistics had varying levels of success in re-assembling the super populations. Some, such as \gls{fld} and \gls{flf} had mini-groups of 2-3 populations that were part of the same super population, but these mini-groups were not closely linked to the other groups of the same super population. These two statistics are based on singletons, and it is likely that these are not well represented in the markers of the CoreExome chip itself, or the quality control that the New Zealand samples underwent. This would lead to an under-representation of the singletons that actually might be present in the populations. Overall, it was found that the clustering of selection and neutrality test statistics for entire chromosomes did not resemble the grouping that clustering on F~ST~ produced. 
 
-However, compared to the entire chromosome summaries, using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population. Clustering from gene lists consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with previously reported results [@1KGP2015snp; @pickrell2009signals]. 
+However, compared to the entire chromosome summaries, using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. The clustering of populations into their super populations was not seen when random windows were used for clustering, indicating that there is a degree of commonality in the extreme windows within a super population group.The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population.
 
+Clustering from gene lists for the frequency spectrum based selection and neurtrality statistics consistently grouped the individual populations into their super populations although there was inconsistency for the \gls{amr} populations. With the exception of the \gls{amr} populations, the clustering of populations using windows or haplotypes was consistent with previously reported results [@1KGP2015snp; @pickrell2009signals]. The grouping of populations was also seen with random lists of genes. This would indicate that the commonalities with populations for a gene are not specific to a disease, but a more general similarity.
 
-
-- use of genes
-- use of random genes
-
-
-
-
-
-Prior to this study there has only been a few studies that have genetically established the relationship of the Polynesian genome with respect to other populations. Recent studies have done this predominantly though the mitochondrial and Y chromosome lineages. The admixture analysis they performed 
-
-The anaylsis is important because it adds evidence to the genetic relationship between the Polynesians and the other populations. 
-
-Other studies have previously shown the ancestral lineages of the Polynesians with relation to the other populations, however this was done predominantly with the mitochondrial and Y chromosome lineages [\@ref]. The relationship using the autosome has aslo been done but using very small sample sizes. This is study is the first to compare four Polynesian populations, two of East, and two of West Polynesian ancestry, and of similar sample sizes to those of the \gls{1kgp}.
-
-Understanding the ancestry of populations helps to inform on
+Other studies have previously shown the ancestral lineages of the Polynesians with relation to the other populations, however this was done predominantly with the mitochondrial and Y chromosome lineages [\@ref]. The relationship using the autosome has also been done, but using very small sample sizes. This study is the first to compare four Polynesian populations, two of East, and two of West Polynesian ancestry, and of similar sample sizes to those of the \gls{1kgp}. The analysis is important because it adds evidence to the genetic relationship between the Polynesians and the other populations and understanding the ancestry of populations helps to inform and reduce the stigma of genetic diseases [\@ref].
 
 
 
@@ -1608,22 +1595,22 @@ the clustering of the most extreme windows represents other than a similarity in
 The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used [@Tajima1989; @fay2000hitchhiking; @Fu1993; @Zeng2006]. The upper end of the distribution is able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics and represent the same types of selection or demography.
 
 
-The clustering based on the median centred values of the statistics was able to reassemble the super population goups. However, the groups were also reassembled with the random draws of genes, with an increase in the number of completely grouped super populations when more genes were used.
+The clustering based on the median centred values of the statistics was able to reassemble the super population groups. However, the groups were also reassembled with the random draws of genes, with an increase in the number of completely grouped super populations when more genes were used.
 
 
 
 - The introduction sets the framework that geographically similar populations are in similar environments and therefore exposed to similar selective pressures.
-- What we see is there is a higher burden of metabolic disease in Polynesians and not in other populations. Could it be that the selective pressure occured after the migratory events?
+- What we see is there is a higher burden of metabolic disease in Polynesians and not in other populations. Could it be that the selective pressure occurred after the migratory events?
 - looking at the the current populations might give us an idea of if there is selective history and if so when a particular event might have taken place
-ie do we see similar frequencies of disease alleles
+i.e. do we see similar frequencies of disease alleles
 - From the sfs results we see that within geographically similar regions they have similar genetic results
 - we also get similar results regions with haplotypic selection
 - somewhat indicated by the use of the clustering using disease genes
 - are there shared haplotypes?
-- because we know the migration history, and we also have shown that the modern day populations still show these groupings that correspond to temporal and spacial geography it can help us infer when a particular region of the genome may have had a selective event.
+- because we know the migration history, and we also have shown that the modern day populations still show these groupings that correspond to temporal and spatial geography it can help us infer when a particular region of the genome may have had a selective event.
 - why does it matter when something happened though?
     - distigmatisation
-- why? by comparing populations it might give an idea of particular regions that might explain differences in prevalence and or severity/likelyhood of developing metabolic disease
+- why? by comparing populations it might give an idea of particular regions that might explain differences in prevalence and or severity/likelihood of developing metabolic disease
 obesity what was found?
 t2d what was found?
 kd what was found?
